--- a/html/explore.html
+++ b/html/explore.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/countries.js"></script>
-    <script src="js/explore.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/explore.css">
+    <script src="../js/countries.js"></script>
+    <script src="../js/explore.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/explore.css">
 
 </head>
 <body>
