--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
         <div class="overlay">Kreeka</div>
       </div>
       <div class="country-card">
-        <img src="../database/Tallinn.jpg" alt="Prantsusmaa">
+        <img src="../database/image/Tallinn.jpg" alt="Prantsusmaa">
         <div class="overlay">Prantsusmaa</div>
       </div>
     </div>
