--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,17 @@
   <!-- AOS animation library -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
-  <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
   <!-- CSS file -->
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/index.css">
+    <script>
+  fetch("../html/footer.html")
+    .then(res => res.text())
+    .then(html => {
+      document.querySelector("#footer").innerHTML = html;
+    });
+
+</script>
+
 </head>
 <body>
 
@@ -26,7 +32,8 @@
     <li><a href="results.html">Tulemused</a></li>
     <li><a href="#contact">Kontaktid</a></li>
   </ul>
-  <a href="explore.html" class="cta-btn">Alusta reisi</a>
+     <a href="explore.html" class="cta-btn">Alusta reisi</a>
+
 </header>
 
 
@@ -39,7 +46,6 @@
     <div class="hero-content">
       <h1>Avasta maailma mängides</h1>
       <p>Leia oma järgmine reisisihtkoht lihtsalt ja lõbusalt</p>
-      <a href="explore.html" class="btn">Alusta reisi</a>
     </div>
   </section>
 
@@ -69,7 +75,7 @@
         </div>
       </div>
       <div class="country-card" data-aos="fade-down" data-aos-delay="700">
-        <img src="../database/image/France.jpg" alt="Pransusmaa">
+        <img src="../database/image/france.jpg" alt="Pransusmaa">
         <div class="overlay">
           <h3>Prantsusmaa</h3>
           <p>Rikas kultuur, maailmakuulus köök ja romantilised linnad.</p>
@@ -85,7 +91,7 @@
     <h2>Meie kasutajad ja kogemused</h2>
     <div class="stat-grid">
       <div class="stat-box">
-        <div class="rolling-counter" data-target="4000">0</div>
+        <div class="rolling-counter" data-target="4">0</div>
         <p>Õnnelikud kasutajad</p>
       </div>
       <div class="stat-box">
@@ -125,34 +131,8 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="footer" id="contact">
-    <div class="footer-left" data-aos="fade-right">
-      <img src="../css/logo.png" alt="TravelSwipe logo" width="140">
-      <p>Avasta maailma mängides</p>
+  <div id="footer"></div>
 
-      <!-- Social icons -->
-      <div class="social-container">
-        <a href="https://www.instagram.com/" target="_blank" class="social-btn instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="https://www.tiktok.com/" target="_blank" class="social-btn tiktok">
-          <i class="fa-brands fa-tiktok"></i>
-        </a>
-      </div>
-    </div>
-
-    <div class="footer-right" data-aos="fade-left">
-      <ul>
-        <li><a href="index.html">Avaleht</a></li>
-        <li><a href="explore.html">Avasta</a></li>
-        <li><a href="results.html">Tulemused</a></li>
-        <li><a href="#about">Meist</a></li>
-      </ul>
-    </div>
-  </footer>
 
   <!-- BACK TO TOP BUTTON -->
   <button id="toTopBtn" title="Go to top">
@@ -163,7 +143,6 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="../js/countries.js"></script>
 
-  </script>
 
 </body>
 </html>
