--- a/html/results.html
+++ b/html/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="../js/results.js"></script>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/results.css">
 
 </head>
