--- a/html/index.html
+++ b/html/index.html
@@ -91,15 +91,17 @@
     <h2>Meie kasutajad ja kogemused</h2>
     <div class="stat-grid">
       <div class="stat-box">
-        <div class="rolling-counter" data-target="4">0</div>
+        <div class="rolling-counter" data-target="4" data-suffix="k+">0</div>
         <p>Õnnelikud kasutajad</p>
       </div>
+
       <div class="stat-box">
-        <div class="rolling-counter" data-target="98">0</div>
+        <div class="rolling-counter" data-target="98" data-suffix="%">0</div>
         <p>Rahulolu tase (%)</p>
       </div>
+
       <div class="stat-box">
-        <div class="rolling-counter" data-target="50">0</div>
+        <div class="rolling-counter" data-target="50" data-suffix="">0</div>
         <p>Euroopa sihtkohta</p>
       </div>
     </div>
