--- a/html/explore.html
+++ b/html/explore.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,5 +11,21 @@
 </head>
 <body>
 
+</body>
+</html> -->
+
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>JSON Image Loader</title>
+  <link rel="stylesheet" href="explore.css" />
+</head>
+<body>
+  <h1>User gallery</h1>
+  <div id="gallery" class="gallery"></div>
+
+  <script src="explore.js"></script>
 </body>
 </html>
