--- a/html/explore.html
+++ b/html/explore.html
@@ -20,12 +20,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>JSON Image Loader</title>
-  <link rel="stylesheet" href="explore.css" />
+  <link rel="stylesheet" href="../css/explore.css" />
 </head>
 <body>
   <h1>User gallery</h1>
   <div id="gallery" class="gallery"></div>
 
-  <script src="explore.js"></script>
+  <script src="../js/explore.js"></script>
 </body>
 </html>
