--- a/html/explore.html
+++ b/html/explore.html
@@ -19,11 +19,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>JSON Image Loader</title>
+  <title>TravelSwipe</title>
   <link rel="stylesheet" href="../css/explore.css" />
 </head>
 <body>
-  <h1>User gallery</h1>
   <div id="gallery" class="gallery"></div>
 
   <script src="../js/explore.js"></script>
