--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 
   <!-- AOS animation library -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <link rel="stylesheet" href="../css/footer.css">
 
   <!-- CSS file -->
   <link rel="stylesheet" href="../css/index.css">
@@ -89,39 +90,25 @@
   <div class="overlay"></div>
   <div class="stats-content">
     <h2>Meie kasutajad ja kogemused</h2>
-
     <div class="stat-grid">
-
-      <!-- 1) 4k+ -->
       <div class="stat-box">
-        <div class="rolling-counter">
-          <span class="rolling-digit" data-target="4">0</span>
-          <span class="rolling-suffix">k+</span>
-        </div>
+        <div class="rolling-counter" data-target="4000" data-suffix="k+">0</div>
         <p>Õnnelikud kasutajad</p>
       </div>
 
-      <!-- 2) 98% -->
       <div class="stat-box">
-        <div class="rolling-counter">
-          <span class="rolling-digit" data-target="98">0</span>
-          <span class="rolling-suffix">%</span>
-        </div>
+        <div class="rolling-counter" data-target="98" data-suffix="%">0</div>
         <p>Rahulolu tase (%)</p>
       </div>
 
-      <!-- 3) 50+ -->
       <div class="stat-box">
-        <div class="rolling-counter">
-          <span class="rolling-digit" data-target="50">0</span>
-          <span class="rolling-suffix">+</span>
-        </div>
+        <div class="rolling-counter" data-target="50" data-suffix="">0</div>
         <p>Euroopa sihtkohta</p>
       </div>
-
     </div>
   </div>
 </section>
+
 
   <!-- FAQ SECTION -->
   <section class="faq">
