--- a/html/explore.html
+++ b/html/explore.html
@@ -15,16 +15,57 @@
 </html> -->
 
 <!doctype html>
-<html lang="en">
+<html lang="et">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TravelSwipe</title>
-  <link rel="stylesheet" href="../css/explore.css" />
+
+  <!-- AOS animation library -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+  <!-- CSS file -->
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/explore.css">
 </head>
 <body>
   <div id="gallery" class="gallery"></div>
 
   <script src="../js/explore.js"></script>
+
+
+  <!-- FOOTER -->
+  <footer class="footer" id="contact">
+    <div class="footer-left" data-aos="fade-right">
+      <img src="../css/logo.png" alt="TravelSwipe logo" width="140">
+      <p>Avasta maailma mängides</p>
+
+      <!-- Social icons -->
+      <div class="social-container">
+        <a href="https://www.instagram.com/" target="_blank" class="social-btn instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://www.tiktok.com/" target="_blank" class="social-btn tiktok">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-right" data-aos="fade-left">
+      <ul>
+        <li><a href="index.html">Avaleht</a></li>
+        <li><a href="explore.html">Avasta</a></li>
+        <li><a href="results.html">Tulemused</a></li>
+        <li><a href="#about">Meist</a></li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 </html>
