--- a/html/explore.html
+++ b/html/explore.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="../css/explore.css">
 
     <!-- anomation-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <!-- js and logic-->
     <script src="../js/countries.js" defer></script>
-    <link rel="stylesheet" href="../css/footer.css">
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 
 <script>
   AOS.init();
@@ -95,14 +94,36 @@
 
 
 <!-- FOOTER -->
-<div id="footer"></div>
-<script>
-  fetch("../html/footer.html")
-    .then(res => res.text())
-    .then(html => {
-      document.querySelector("#footer").innerHTML = html;
-    });
-</script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+<footer class="footer" id="contact">
+
+  <div class="footer-left" data-aos="fade-right">
+    <img src="../css/logo.png" alt="TravelSwipe logo" width="140">
+    <p>Avasta maailma mängides</p>
+
+    <div class="social-container">
+      <a href="https://www.instagram.com/" target="_blank" class="social-btn instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook">
+        <i class="fa-brands fa-facebook-f"></i>
+      </a>
+      <a href="https://www.tiktok.com/" target="_blank" class="social-btn tiktok">
+        <i class="fa-brands fa-tiktok"></i>
+      </a>
+    </div>
+  </div>
+
+  <div class="footer-right" data-aos="fade-left">
+    <ul>
+      <li><a href="index.html">Avaleht</a></li>
+      <li><a href="explore.html">Avasta</a></li>
+      <li><a href="results.html">Tulemused</a></li>
+      <li><a href="#about">Meist</a></li>
+    </ul>
+  </div>
+</footer>
 
 
 
