--- a/html/results.html
+++ b/html/results.html
@@ -6,9 +6,44 @@
     <script src="../js/results.js"></script>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/results.css">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <h1>Hello World</h1>
 
 </head>
 <body>
 
+
 </body>
+<!-- FOOTER -->
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+<footer class="footer" id="contact">
+
+  <div class="footer-left" data-aos="fade-right">
+    <img src="../css/logo.png" alt="TravelSwipe logo" width="140">
+    <p>Avasta maailma mängides</p>
+
+    <div class="social-container">
+      <a href="https://www.instagram.com/" target="_blank" class="social-btn instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook">
+        <i class="fa-brands fa-facebook-f"></i>
+      </a>
+      <a href="https://www.tiktok.com/" target="_blank" class="social-btn tiktok">
+        <i class="fa-brands fa-tiktok"></i>
+      </a>
+    </div>
+  </div>
+
+  <div class="footer-right" data-aos="fade-left">
+    <ul>
+      <li><a href="index.html">Avaleht</a></li>
+      <li><a href="explore.html">Avasta</a></li>
+      <li><a href="results.html">Tulemused</a></li>
+      <li><a href="#about">Meist</a></li>
+    </ul>
+  </div>
+</footer>
 </html>
