--- a/html/explore.html
+++ b/html/explore.html
@@ -6,26 +6,22 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/explore.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-
-    <!-- anomation-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- AOS animations -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <!-- js and logic-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+
+    <!-- Main JS -->
     <script src="../js/explore.js" defer></script>
-
-
-<script>
-  AOS.init();
-</script>
 </head>
+
 <body>
 
 
 
-<!-- =============================
-            MAIN LAYOUT
-================================= -->
+<!-- Back to Top button (needed for JS) -->
+<button id="toTopBtn" class="to-top-btn">↑</button>
 
 <main class="swipe-layout">
 
@@ -38,47 +34,38 @@
         </p>
 
         <ul class="swipe-hints">
-            <li>⬅ Vasak – jäta vahele</li>
+            <li>⬅ Vasak – jäта vahele</li>
             <li>➡ Parem – lisa lemmikutesse</li>
             <li>␣ Tühik või ❤️ – ka “meeldib”</li>
         </ul>
-    </section>
 
+    </section>
 
     <!-- Game -->
     <section class="swipe-game" data-aos="fade-left">
 
-  <!-- STACKED CARDS -->
-  <div id="stackContainer" class="stack-container">
-    <!-- Cards will be injected dynamically -->
-  </div>
+        <!-- PLACE FOR CARDS -->
+        <div id="stackContainer" class="stack-container"></div>
 
-  <!-- Controls -->
-  <div class="swipe-controls" data-aos="zoom-in" data-aos-delay="150">
-    <button class="swipe-btn swipe-dislike" id="btnDislike" aria-label="Dislike">
-      ✖
-    </button>
-    <button class="swipe-btn swipe-like" id="btnLike" aria-label="Like">
-      ❤️
-    </button>
-  </div>
+        <!-- Controls -->
+        <div class="swipe-controls" >
+            <button class="swipe-btn swipe-dislike" id="btnDislike">✖</button>
+            <button class="swipe-btn swipe-like" id="btnLike">❤️</button>
+        </div>
 
-  <!-- End -->
-  <div class="swipe-end" id="swipeEnd" hidden>
-    <h2>Oled kõik riigid läbi vaadanud!</h2>
-    <p>Vaata oma lemmikuid tulemuste lehel.</p>
-    <a href="results.html" class="swipe-results-link">Vaata tulemusi</a>
-  </div>
+        <!-- End message -->
+        <div class="swipe-end" id="swipeEnd" hidden>
+            <h2>Oled kõik riigid läbi vaadanud!</h2>
+            <a href="results.html" class="swipe-results-link">Vaata tulemusi</a>
+        </div>
 
-</section>
+        <!-- Test JSON output -->
+        <div id="jsonTest"></div>
 
-
+    </section>
 </main>
 
-
 <!-- FOOTER -->
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <footer class="footer" id="contact">
 
   <div class="footer-left" data-aos="fade-right">
@@ -86,15 +73,9 @@
     <p>Avasta maailma mängides</p>
 
     <div class="social-container">
-      <a href="https://www.instagram.com/" target="_blank" class="social-btn instagram">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook">
-        <i class="fa-brands fa-facebook-f"></i>
-      </a>
-      <a href="https://www.tiktok.com/" target="_blank" class="social-btn tiktok">
-        <i class="fa-brands fa-tiktok"></i>
-      </a>
+      <a href="https://www.instagram.com/" class="social-btn instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.facebook.com/" class="social-btn facebook"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.tiktok.com/" class="social-btn tiktok"><i class="fa-brands fa-tiktok"></i></a>
     </div>
   </div>
 
@@ -106,10 +87,9 @@
       <li><a href="#about">Meist</a></li>
     </ul>
   </div>
+
 </footer>
-
-
-
 
 </body>
 </html>
+console.log("stackContainer:", document.getElementById("stackContainer"));
