Modifitseerisin results.js html ja css faile, et nüüd saab vaadata meeldinud riike. Footer ei töötaresults lehel.

--- a/html/results.html
+++ b/html/results.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../js/results.js"></script>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/results.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <h1>Hello World</h1>
 
 </head>
 <body>
 
 
 </body>
+
+<h1 class="results-title">Sinu lemmikriigid</h1>
+
+<div id="resultsContainer" class="results-container"></div>
+
+<script src="../js/results.js"></script>
 <!-- FOOTER -->
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -45,7 +49,5 @@
       <li><a href="#about">Meist</a></li>
     </ul>
   </div>
-
-  lol
 </footer>
 </html>
