--- a/html/explore.html
+++ b/html/explore.html
@@ -59,7 +59,7 @@
         </div>
 
         <!-- End message -->
-        <div class="swipe-end" id="swipeEnd" hidden>
+        <div class="swipe-end" id="swipeEnd">
             <h2>🎉 Oled kõik riigid läbi vaadanud!</h2>
             <a href="results.html" class="swipe-results-link">Vaata tulemusi</a>
         </div>
