--- a/html/explore.html
+++ b/html/explore.html
@@ -61,7 +61,7 @@
         <!-- End message -->
         <div class="swipe-end" id="swipeEnd">
             <h2>🎉 Oled kõik riigid läbi vaadanud!</h2>
-            <a href="results.html" class="swipe-results-link">Vaata tulemusi</a>
+            <a href="results.html" class="swipe-results-link" id="resultsLink">Vaata tulemusi</a>
         </div>
 
     </section>
