lisatud eesti keeles komenaatird

--- a/html/results.html
+++ b/html/results.html
@@ -29,10 +29,16 @@
         <p>Riigid, mis sulle meeldisid</p>
     </section>
 
-    <!-- Results Container -->
+    <!-- Carousel Container -->
     <section class="results-content" data-aos="fade-up">
-        <div id="resultsGrid" class="results-grid">
-            <!-- Cards will be inserted here by JS -->
+        <div class="carousel-container">
+            <div class="slide" id="carouselSlide">
+                <!-- Cards will be inserted here by JS -->
+            </div>
+            <div class="button">
+                <button class="prev">◁</button>
+                <button class="next">▷</button>
+            </div>
         </div>
 
         <!-- Empty State -->
